# grid-synth

./: CMakeLists.txt
source/: main.cpp
source/core/: grid_synth.cpp  grid_synth.hpp
source/editor/: editor.cpp  editor.hpp
